--- a/rapsteam/common/templates/protocol_pdf.html
+++ b/rapsteam/common/templates/protocol_pdf.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <meta http-equiv=Content-Type content="text/html;charset=utf-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Template</title>
     <style>
+        @font-face {
+            font-family: 'MyFont';
+            src: url('{{ font }}') format('truetype');
+        }
         body {
-            font-family: Times, Jost, sans-serif;
+            font-family: Arial Unicode, MyFont, Times, Jost, sans-serif;
             font-size: 13px;
+        }
+        .section {
+            margin: 0;
+        }
+        p {
+            margin: 8px;
         }
         .today {
             text-align: right;
@@ -17,8 +28,13 @@
             display: flex;
             text-align: center;
         }
-        .under {
-            margin-left: 40px;
+        .under1 {
+            margin-left: 30px;
+            margin-top: -8px;
+            font-size: 11px;
+        }
+        .under2 {
+            margin-right: 60px;
             margin-top: -8px;
             font-size: 11px;
         }
@@ -35,6 +51,13 @@
         table td, th {
             border: 1px solid black;
             text-align: center;
+        }
+        ul {
+            margin-top: 0px;
+            margin-left: 5px;
+        }
+        .attachment td{
+            border: none;
         }
     </style>
 </head>
@@ -63,7 +86,7 @@
             </strong>
         </p>
     </div>
-    <div class="section">
+    {% comment %} <div class="section">
         <p style="margin-bottom: -5px; padding: 0px;">
             <strong>
                 3. Ze strony wykonawcy:
@@ -85,7 +108,7 @@
             <br>5. ................................................
         </p>
         <p class="under"><i></i></p>
-    </div>
+    </div> {% endcomment %}
     <div class="section">
         <p>
             <strong>
@@ -117,5 +140,102 @@
         </tr>
         {% endfor %}
     </table>
+    <div class="section">
+        <p>
+            <strong>
+                4. Potwierdzenie kompletności realizacji przedmiotu Umowy:
+            </strong>
+        </p>
+        <ul>
+            {% if completeness_yes %}
+            <li>Tak</li>
+            {% else %}
+            <li><s>Tak</s></li>
+            {% endif %}
+            {% if completeness_no %}
+            <li>Nie - zastrzeżenia: {{ caveats_completeness }}</li>
+            {% else %}
+            <li><s>Nie - zastrzeżenia:</s></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="section">
+        <p>
+            <strong>
+                5. Potwierdzenie zgodności jakości przyjmowanego przedmiotu Umowy:
+            </strong>
+        </p>
+        <ul>
+            {% if compliance_yes %}
+            <li>zgodne</li>
+            {% else %}
+            <li><s>zgodne</s></li>
+            {% endif %}
+            {% if compliance_no %}
+            <li>niezgodne - zastrzeżenia: {{ caveats_compliance }}</li>
+            {% else %}
+            <li><s>niezgodne - zastrzeżenia:</s></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="section">
+        <p>
+            <strong>
+                6. Termin wykonania Umowy:
+            </strong>
+        </p>
+        <ul>
+            {% if term_yes %}
+            <li>zgodny z Umową</li>
+            {% else %}
+            <li><s>zgodny z Umową</s></li>
+            {% endif %}
+            {% if term_no %}
+            <li>niezgodny z Umową - zastrzeżenia: {{ caveats_term }}</li>
+            {% else %}
+            <li><s>niezgodny z Umową - zastrzeżenia:</s></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="section">
+        <p>
+            <strong>
+                7. Końcowy wynik odbioru:
+            </strong>
+        </p>
+        <ul>
+            {% if result_yes %}
+            <li>zgodny z ustaleniem</li>
+            {% else %}
+            <li><s>zgodny z ustaleniem</s></li>
+            {% endif %}
+            {% if result_no %}
+            <li>niezgodny z ustaleniem - zastrzeżenia: {{ caveats_result }}</li>
+            {% else %}
+            <li><s>niezgodny z ustaleniem - zastrzeżenia:</s></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="section">
+        <p style="margin-bottom: 0px;">
+            <strong>
+                8. Podpisy:
+            </strong>
+        </p>
+        <table class="attachment">
+            <td style="text-align: left;">
+                <p>1. ................................................</p>
+                <p>2. ................................................</p>
+                <p>3. ................................................</p>
+                <p>4. ................................................</p>
+                <p>5. ................................................</p>
+                <p class="under1"><i>(członkowie komisji odbioru)</i></p>
+            </td>
+            <td style="text-align: right;">
+                ...........................................................................
+                <p class="under2"><i>(przedstawiciel Wykonawcy)</i></p>
+            </td>
+        </table>
+    </div>
 </body>
 </html>
