--- a/rapsteam/common/templates/index.html
+++ b/rapsteam/common/templates/index.html
@@ -137,7 +137,7 @@
                 <button id="clear-button">×</button>
                 <ul id="school-list">
                     {% for school in schools_list %}
-                        <li data-school-name="{{ szkola }}">{{ school }}</li>
+                        <li data-school-name="{{ school }}">{{ school }}</li>
                     {% endfor %}
                 </ul>
             </div>
