--- a/rapsteam/common/templates/protocol_pdf.html
+++ b/rapsteam/common/templates/protocol_pdf.html
@@ -86,7 +86,7 @@
     <div class="section">
         <p>
             <strong>
-                2. Data odbioru:&nbsp;&nbsp;&nbsp; {{ today_date }} r.
+                2. Data odbioru:&nbsp;&nbsp;&nbsp; {{ receipt_date }} r.
             </strong>
         </p>
     </div>
